--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,1 +1,28 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
+
+body {
+  font-size: 16px;
+  font-weight: 500;
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+p,
+section {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
